--- a/work/LMP_001.html
+++ b/work/LMP_001.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- css js inject -->
     <link rel="stylesheet" href="../css/biz2/reset.css">
     <link rel="stylesheet" href="../css/biz2/common.css">
@@ -16,7 +16,9 @@
     <script src="../js/biz2/script.js"></script>
     <title>울산광역시 평생교육이용권</title>
 </head>
-<body class="main">
+<body class="main" style="position: relative;">
+    <!-- <img src="../images/biz2/임시/LMP_001_메인 로긴전.jpg" alt="" style="position: absolute; left: 0; top: 0; opacity: 0.0; width: 1920px;"> -->
+    <!-- <img src="../images/biz2/임시/LMM_001_지자체 홈페이지(로그인 전).jpg" alt="" style="position: absolute; left: 0; top: 0; opacity: 0; width: 360px;"> -->
     <header>
         <div class="logo-area multi-logo-area">
             <a href="LMP_001.html"><img src="../images/biz2/header_logo_horizontal.svg" alt="울산광역시"></a>
