--- a/work/index.html
+++ b/work/index.html
@@ -643,13 +643,15 @@
             12.17 : 1차 퍼블리싱 업데이트 완료
           </td>
         </tr>
-        <tr class="line l">
+        <tr class="line done l">
           <th>평생교육이용권</th>
           <td>이용권 지자체_우수 이용자 신청완료</td>
           <td>page</td>
           <td><a href="./LAP_004.html">LAP_004.html</a></td>
-          <td class="ac"></td>
-          <td></td>
+          <td class="ac">O</td>
+          <td>
+            12.19 : 퍼블리싱 업데이트 완료
+          </td>
         </tr>
         <tr class="line done l">
           <th>평생교육이용권</th>
