--- a/work/LAP_105.html
+++ b/work/LAP_105.html
@@ -86,44 +86,46 @@
         </div>
 
         <ul class="steps flex-acjc">
-            <li>
+            <li class="lg-only">
                 <span class="step01">1단계</span>
                 <strong>약관동의</strong>
             </li>
-            <li class="step-arrow"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
-            <li class="active">
+            <li class="step-arrow lg-only"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
+            <li class="lg-only">
                 <span class="step02">2단계</span>
                 <strong>본인인증 및<br>자격검증</strong>
             </li>
-            <li class="step-arrow"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
-            <li class="disabled">
+            <li class="step-arrow lg-only"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
+            <li>
                 <span class="step03">3단계</span>
                 <strong>신청서 작성</strong>
             </li>
-            <li class="step-arrow disabled lg-only"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
-            <li class="disabled lg-only"> 
+            <li class="step-arrow"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
+            <li> 
                 <span class="step08">4단계</span>
                 <strong>이용자 서약</strong>
             </li>
-            <li class="step-arrow disabled lg-only"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
-            <li class="disabled lg-only">
+            <li class="step-arrow"><img src="../images/biz2/ico/ico_step_arrow.svg" alt="다음 단계"></li>
+            <li class="active">
                 <span class="step06">5단계</span>
                 <strong>신청완료</strong>
             </li>
         </ul>
 
         <hr>
-       
-        <div class="auth-area">
-            <div class="auth-area-in flex-ac">
-                <button class="ico simple">간편인증</button>
-                <button class="ico joint">공동인증서</button>
-                <button class="ico mo-auth">휴대폰인증</button>
-                <button class="ico i-pin">아이핀(i-pin)</button>
+
+        <div class="complete-area">
+            <div class="complete-wrap border-box">
+                <strong><span class="color-primary">홍길동</span> 님의 차수 추가 신청이 완료되었습니다.</strong>
+                <p class="mssg">신청서에 입력한 회원 아이디로 접속하여 신청된 내용을 확인하세요.<br>학습계획서 제출은 선택 사항이나, 경합 시 학습계획서 제출자를 우선 선발합니다</p>
             </div>
+            <p class="asterisk">※ 온라인 신청과 오프라인 신청 중 하나만 신청하시기 바랍니다.</p>
+        </div>
+        <div class="page-header">
+            <h2 class="page-header-tit">신청정보 확인 및 신청완료</h2>
         </div>
         <div class="top-info-group">
-            <h3>본인인증 정보</h3>
+            <h3>신청인 정보</h3>
         </div>
         <div class="com-write-table resident-chk">
             <table class="basic-info">
@@ -131,74 +133,67 @@
                 <colgroup>
                     <col style="width: 200px;">
                     <col>
-                </colgroup>
-                <tbody>
-                    <tr>
-                        <th class="txt-l">
-                            <label for="a">이름</label>
-                        </th>
-                        <td>
-                            <input type="text" id="a" class="fixed-value">
-                        </td>
-                    </tr>
-                    <tr>
-                        <th class="txt-l">
-                            <label for="b">주민등록번호</label>
-                        </th>
-                        <td>
-                            <div class="flex-ac gap-10 fixed-value">
-                                <input type="number" id="b" maxlength="6" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
-                                -
-                                <input type="password" id="c" maxlength="7" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <ul class="asterisk-list">
-                <li>※ 본인인증 불가 시 대체 인증방법 <strong>[게시판-공지사항 185번] 참고</strong> <button type="button" class="agree-btn">바로보기</button></li>
-                <li>※ 이수결과는 강의를 수강한 사용기관에서 등록하므로 해당 사용기관에 확인 필요</li>
-            </ul>
-        </div>
-        <div class="com-write-table birth-chk">
-            <table>
-                <caption>신청정보 입력란</caption>
-                <colgroup>
                     <col style="width: 200px;">
                     <col>
                 </colgroup>
                 <tbody>
                     <tr>
-                        <th class="txt-l">
-                            <label for="c">이름</label>
-                        </th>
-                        <td>
-                            <input type="text" id="c" class="mw-set" style="--mw-set: 560px">
-                        </td>
+                        <th class="txt-l">신청인 이름</th>
+                        <td>홍길동</td>
+                        <th class="txt-l">생년월일</th>
+                        <td>2000.01.01</td>
                     </tr>
                     <tr>
-                        <th class="txt-l">
-                            <label for="d">생년월일</label>
-                        </th>
-                        <td>
-                            <div class="flex-ac gap-10 mw-set" style="--mw-set: 560px">
-                                <div>
-                                    <input type="number" id="d" maxlength="6" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
-                                </div>
-                                -
-                                <div class="flex-ac">
-                                    <input type="password" id="e" maxlength="1" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
-                                    <span id="secure-value"></span>
-                                </div>
-                            </div>
-                        </td>
+                        <th class="txt-l">지급수단</th>
+                        <td>선불카드(개인)</td>
+                        <th class="txt-l">지급기관</th>
+                        <td>신한카드</td>
+                    </tr>
+                    <tr>
+                        <th class="txt-l">휴대폰번호</th>
+                        <td colspan="3">010-1234-5678</td>
                     </tr>
                 </tbody>
             </table>
         </div>
+        <div class="top-info-group">
+            <h3>지원자대상 정보</h3>
+        </div>
+        <div class="com-view-table">
+            <table>
+                <thead>
+                  <tr>
+                    <th scope="col">&nbsp;</th>
+                    <th colspan="2" scope="colgroup">2024학년도</th>
+                    <th colspan="2" scope="colgroup">2025학년도</th>
+                  </tr>
+                  <tr>
+                    <th scope="row">&nbsp;</th>
+                    <th scope="col">이용권 신청여부</th>
+                    <th scope="col">신청가능금액</th>
+                    <th scope="col">이용권 신청여부</th>
+                    <th scope="col">신정가능금액</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">&nbsp;</th>
+                    <td>신청가능</td>
+                    <td class="txt-r color-blue">4,000,000</td>
+                    <td>대상자 아님</td>
+                    <td class="txt-r">0</td>
+                  </tr>
+                  <tr class="total">
+                    <th scope="row">신청가능 총 금액</th>
+                    <td colspan="2" class="txt-r">4,000,000</td>
+                    <td colspan="2" class="txt-r">0</td>
+                  </tr>
+                </tbody>
+            </table>
+        </div>
         <div class="btns-bottom">
-            <a href="javascript:;" class="btn-bd green">이전</a>
-            <a href="javascript:;" class="btns">다음</a>
+            <a href="javascript:;" class="btn-bd green">신청 내역 확인</a>
+            <a href="javascript:;" class="btns">메인으로</a>
         </div>
     </div>
     <footer class="wrap">
