--- a/work/index.html
+++ b/work/index.html
@@ -661,45 +661,47 @@
           <td class="ac">O</td>
           <td>12.11 : 시연용 대체 이미지 퍼블리싱</td>
         </tr>
-        <tr class="line l">
+        <tr class="line done l">
           <th>평생교육이용권</th>
           <td>이용권 지자체_평생교육이용권 신청 2단계_본인인증</td>
           <td>page</td>
           <td><a href="./LAP_101.html">LAP_101.html</a></td>
-          <td class="ac"></td>
+          <td class="ac">O</td>
           <td></td>
         </tr>
-        <tr class="line l">
+        <tr class="line done l">
           <th>평생교육이용권</th>
           <td>이용권 지자체_평생교육이용권 신청 2단계_자격검증</td>
           <td>page</td>
           <td><a href="./LAP_102.html">LAP_102.html</a></td>
-          <td class="ac"></td>
-          <td></td>
+          <td class="ac">O</td>
+          <td>
+            12.19:1차 퍼블리싱
+          </td>
         </tr>
-        <tr class="line l">
+        <tr class="line done l">
           <th>평생교육이용권</th>
           <td>이용권 지자체_평생교육이용권 신청 3단계</td>
           <td>page</td>
           <td><a href="./LAP_103.html">LAP_103.html</a></td>
-          <td class="ac"></td>
-          <td></td>
+          <td class="ac">O</td>
+          <td>O</td>
         </tr>
-        <tr class="line l">
+        <tr class="line done l">
           <th>평생교육이용권</th>
           <td>이용권 지자체_평생교육이용권 신청 4단계</td>
           <td>page</td>
           <td><a href="./LAP_104.html">LAP_104.html</a></td>
-          <td class="ac"></td>
-          <td></td>
+          <td class="ac">O</td>
+          <td>12.19:1차 퍼블리싱</td>
         </tr>
-        <tr class="line l">
+        <tr class="line done l">
           <th>평생교육이용권</th>
           <td>이용권 지자체_평생교육이용권 신청 완료</td>
           <td>page</td>
           <td><a href="./LAP_105.html">LAP_105.html</a></td>
-          <td class="ac"></td>
-          <td></td>
+          <td class="ac">O</td>
+          <td>12.19:1차 퍼블리싱</td>
         </tr>
         <tr class="line done l">
           <th>평생교육이용권</th>
