--- a/work/LAP_102.html
+++ b/work/LAP_102.html
@@ -112,93 +112,51 @@
             </li>
         </ul>
 
-        <hr>
-       
-        <div class="auth-area">
-            <div class="auth-area-in flex-ac">
-                <button class="ico simple">간편인증</button>
-                <button class="ico joint">공동인증서</button>
-                <button class="ico mo-auth">휴대폰인증</button>
-                <button class="ico i-pin">아이핀(i-pin)</button>
-            </div>
-        </div>
+        <hr>       
+        
         <div class="top-info-group">
-            <h3>본인인증 정보</h3>
+            <h3>신청가능한 이용권</h3>
         </div>
-        <div class="com-write-table resident-chk">
-            <table class="basic-info">
-                <caption>본인인증 정보 입력란</caption>
-                <colgroup>
-                    <col style="width: 200px;">
-                    <col>
-                </colgroup>
-                <tbody>
-                    <tr>
-                        <th class="txt-l">
-                            <label for="a">이름</label>
-                        </th>
-                        <td>
-                            <input type="text" id="a" class="fixed-value">
-                        </td>
-                    </tr>
-                    <tr>
-                        <th class="txt-l">
-                            <label for="b">주민등록번호</label>
-                        </th>
-                        <td>
-                            <div class="flex-ac gap-10 fixed-value">
-                                <input type="number" id="b" maxlength="6" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
-                                -
-                                <input type="password" id="c" maxlength="7" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-            <ul class="asterisk-list">
-                <li>※ 본인인증 불가 시 대체 인증방법 <strong>[게시판-공지사항 185번] 참고</strong> <button type="button" class="agree-btn">바로보기</button></li>
-                <li>※ 이수결과는 강의를 수강한 사용기관에서 등록하므로 해당 사용기관에 확인 필요</li>
-            </ul>
-        </div>
-        <div class="com-write-table birth-chk">
-            <table>
-                <caption>신청정보 입력란</caption>
-                <colgroup>
-                    <col style="width: 200px;">
-                    <col>
-                </colgroup>
-                <tbody>
-                    <tr>
-                        <th class="txt-l">
-                            <label for="c">이름</label>
-                        </th>
-                        <td>
-                            <input type="text" id="c" class="mw-set" style="--mw-set: 560px">
-                        </td>
-                    </tr>
-                    <tr>
-                        <th class="txt-l">
-                            <label for="d">생년월일</label>
-                        </th>
-                        <td>
-                            <div class="flex-ac gap-10 mw-set" style="--mw-set: 560px">
-                                <div>
-                                    <input type="number" id="d" maxlength="6" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
-                                </div>
-                                -
-                                <div class="flex-ac">
-                                    <input type="password" id="e" maxlength="1" oninput="javascript: if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);">
-                                    <span id="secure-value"></span>
-                                </div>
-                            </div>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        <ul class="available-tickets">
+            <li>
+                <strong>충청남도<br> 평생교육이용권 3차</strong>
+                <div class="disc">
+                    <p class="color-primary">주민등록 상 충청남도 홍성군 거주</p>
+                    <div class="price-wrap">
+                        <span class="price">100,000원</span>
+                        <span class="box">1914.07.15~2005.07.15 출생</span>
+                    </div> 
+                    <ul class="bullet-list">
+                        <li>자격요건 : 무관</li>
+                        <li>장애 여부 : 무관</li>
+                        <li>장학재단 중복 수혜 : 허용안함</li>
+                        <li>자격요건 : 무관</li>
+                        <li>신청기간 : 2024.08.01 (10시) ~ 2024.11.30 (18시)</li>
+                    </ul>
+                </div>
+                <button type="button" class="btns bg-blue">선택</button>
+            </li>
+            <li>
+                <strong>충청남도<br> 평생교육이용권 3차</strong>
+                <div class="disc">
+                    <p class="color-primary">주민등록 상 충청남도 홍성군 거주</p>
+                    <div class="price-wrap">
+                        <span class="price">100,000원</span>
+                        <span class="box">1914.07.15~2005.07.15 출생</span>
+                    </div> 
+                    <ul class="bullet-list">
+                        <li>자격요건 : 무관</li>
+                        <li>장애 여부 : 무관</li>
+                        <li>장학재단 중복 수혜 : 허용안함</li>
+                        <li>자격요건 : 무관</li>
+                        <li>신청기간 : 2024.08.01 (10시) ~ 2024.11.30 (18시)</li>
+                    </ul>
+                </div>
+                <button type="button" class="btns bg-blue">선택</button>
+            </li>
+        </ul>
         <div class="btns-bottom">
-            <a href="javascript:;" class="btn-bd green">이전</a>
-            <a href="javascript:;" class="btns">다음</a>
+            <a href="javascript:;" class="btns">이전</a>
         </div>
     </div>
     <footer class="wrap">
