--- a/work/IIP_201.html
+++ b/work/IIP_201.html
@@ -141,7 +141,11 @@
                             <td>1</td>
                         </tr>
                         <tr>
-                            <th class="txt-l">사용자 정보 제공</th>
+                            <th class="txt-l">정원</th>
+                            <td colspan="3">20</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">총교육일수/<br>시간/차수</th>
                             <td>35일</td>
                             <th class="txt-l">교육시간(회당)</th>
                             <td>4시간</td>
@@ -211,12 +215,11 @@
                     <caption>강좌정보 테이블</caption>
                     <colgroup>
                         <col style="width: 10%;">
-                        <col style="width: 10%;">
+                        <col style="width: 18%;">
                         <col style="width: 10%;">
                         <col style="width: 18%;">
-                        <col style="width: 18%;">
+                        <col>
                         <col style="width: 14%;">
-                        <col style="width: 20%;">
                     </colgroup>
                     <thead>
                         <tr>
@@ -226,9 +229,6 @@
                             <th>생년월일</th>
                             <th>출석일수/시간/차수</th>
                             <th>이수여부</th>
-                            <th>
-                                <button type="button" class="layer-btn btns bg-blue" onclick="$('[data-pop=pop-1]').show();">추가</button>
-                            </th>
                         </tr>
                     </thead>
                     <tbody>
@@ -237,32 +237,24 @@
                             <td>디지털</td>
                             <td>홍길동</td>
                             <td>1989.02.12</td>
-                            <td class="day"><input type="text"> 일</td>
+                            <td>10일</td>
                             <td>이수중</td>
-                            <td class="btn-wrap">
-                                <button type="button" class="btns bg-blue">저장</button>
-                                <button type="button" class="btns bg-blue">삭제</button>
-                            </td>
                         </tr>
                         <tr>
                             <td>1</td>
-                            <td>디지털</td>
-                            <td>홍길동</td>
-                            <td>1989.02.12</td>
-                            <td class="day"><input type="text"> 일</td>
+                            <td>서울특별시</td>
+                            <td>홍길순</td>
+                            <td>2010.11.12</td>
+                            <td>12일</td>
                             <td>이수중</td>
-                            <td class="btn-wrap">
-                                <button type="button" class="btns bg-blue">저장</button>
-                                <button type="button" class="btns bg-blue">삭제</button>
-                            </td>
                         </tr>
                     </tbody>
                 </table>
                 <p class="add-notice">* 이수여부는 80%이상 출석여부에 따라 자동 계산되며, 학습자의 출석일수 저장 시 강좌의 총교육일수는 수정이 불가합니다.</p>
                 <div class="btns-bottom">
+                    <a href="#" class="btn btns">목록</a>
                     <a href="#" class="btn btn-bd">수정</a>
                     <button type="button" class="btn btn-bd">삭제</button>
-                    <a href="#" class="btn btns">목록</a>
                 </div>
             </div>
         </div>
