--- a/work/IIP_205.html
+++ b/work/IIP_205.html
@@ -75,10 +75,9 @@
         <div class="top-location-area wrap">
             <span class="home"><span class="blind">홈</span></span>
             <div class="location-box">
-                <span class="arrow">이용권 사용기관</span>
+                <span class="arrow">평생교육이용권 사용기관</span>
                 <span class="arrow">교육과정 정보</span>
-                <span class="arrow">교육과정 정보 상세</span>
-                <span class="arrow">교육과정 정보 수정</span>
+                <span class="arrow">교육과정 정보 등록</span>
             </div>
         </div>
     </div>
@@ -93,7 +92,7 @@
                     <div>
                         <small><em class="color-red">*</em> 는 필수사항입니다.</small>
                         <p class="color-blue">최초 등록일시 : 2024-09-12 11:12:11, 최종 수정일시 : 2024-12-12 12:11:12</p>                        
-                    </div>                            
+                    </div> 
                 </div>
             </div>
             <div class="com-write-table">
@@ -113,7 +112,7 @@
                             <td colspan="3">
                                 <div class="input-wrap">
                                     <input type="text" id="a" placeholder="평생교육강좌">
-                                    <button type="button" class="btns layer-btn" onclick="$('[data-pop=pop-1]').show();">학점은행제 평가인정 강좌 조회</button>
+                                    <button type="button" class="btns layer-btn" onclick="$('[data-pop=pop-0]').show();">학점은행제 평가인정 강좌 조회</button>
                                 </div>
                             </td>
                         </tr>
@@ -194,17 +193,16 @@
                                 </select>
                             </td>
                             <th class="txt-l">
-                                <label for="ds">대상자</label>
+                                <label for="e" >대상자</label>
                             </th>
                             <td>
-                                <select id="ds" class="fixed-value">
+                                <select id="e" class="fixed-value">
                                     <option value="none">선택하세요</option>
                                     <option value="1">2</option>
                                     <option value="1">3</option>
                                     <option value="1">4</option>
                                 </select>
                             </td>
-                        </tr>
                         <tr>
                             <th class="txt-l">학점은행제<br>평가인정여부</th>
                             <td>
@@ -300,7 +298,7 @@
                         </tr>
                     </tbody>
                 </table>
-            </div>
+            </div>    
             <div class="top-info-group">
                 <h3>학습자 정보</h3>
                 <div class="r-section">
@@ -352,7 +350,7 @@
                             </td>
                         </tr>
                         <tr>
-                            <td>2</td>
+                            <td>1</td>
                             <td>디지털</td>
                             <td>홍길동</td>
                             <td>1989.02.12</td>
@@ -366,12 +364,12 @@
                     </tbody>
                 </table>
             </div>
+            <p class="add-notice">* 이수여부는 80%이상 출석여부에 따라 자동 계산되며, 학습자의 출석일수 저장 시 강좌의 총교육일수는 수정이 불가합니다.</p>
             <div class="btns-bottom">
                 <button type="button" class="btn-bd">목록</button>
-                <button type="button" class="btns">수정</button>
+                <button type="button" class="btns">등록</button>
             </div>
         </div> 
-    </div>
     </div>
     <footer class="wrap">
         <div class="info-content">
