--- a/work/index.html
+++ b/work/index.html
@@ -226,6 +226,22 @@
           <td class="ac">O</td>
           <td></td>
         </tr>
+        <tr class="line">
+          <th>평생교육이용권</th>
+          <td>이용권 사용기관_교육과정 정보 등록(일반 교육기관)</td>
+          <td>page</td>
+          <td><a href="./IIP_204.html" target="blank">IIP_204.html</a></td>
+          <td class="ac"></td>
+          <td></td>
+        </tr>
+        <tr class="line">
+          <th>평생교육이용권</th>
+          <td>이용권 사용기관_교육과정 정보 등록(학점은행제 평가인정 교육기관)</td>
+          <td>page</td>
+          <td><a href="./IIP_205.html" target="blank">IIP_205.html</a></td>
+          <td class="ac"></td>
+          <td></td>
+        </tr>
         <tr class="line done">
           <th>평생교육이용권</th>
           <td>이용권 사용기관_학습자정보</td>
@@ -436,14 +452,6 @@
         </tr>
         <tr class="line done">
           <th>평생교육이용권</th>
-          <td>이용권 사용기관_교육결과_관리_등록</td>
-          <td>page</td>
-          <td><a href="./IIP_152.html">IIP_152.html</a></td>
-          <td class="ac">O</td>
-          <td>12.17 : 1차 퍼블리싱 완료</td>
-        </tr>
-        <tr class="line done">
-          <th>평생교육이용권</th>
           <td>이용권 사용기관_교육결과_관리_수정</td>
           <td>page</td>
           <td><a href="./IIP_153.html">IIP_153.html</a></td>
@@ -602,7 +610,7 @@
           <td>page</td>
           <td><a href="./LUP_001.html">LUP_001.html</a></td>
           <td class="ac">O</td>
-          <td>12.11 : 시연용 대체 이미지 퍼블리싱</td>
+          <td>12.21 : 1차 퍼블리싱</td>
         </tr>
         <tr class="line l">
           <th>평생교육이용권</th>
@@ -765,7 +773,7 @@
           <td>page</td>
           <td><a href="./LAP_400.html">LAP_400.html</a></td>
           <td class="ac">O</td>
-          <td>12.11 : 시연용 대체 이미지 퍼블리싱</td>
+          <td>12.21 : 1차 퍼블리싱 완료</td>
         </tr>
         <tr class="line done l">
           <th>평생교육이용권</th>
