--- a/work/IIP_150.html
+++ b/work/IIP_150.html
@@ -90,65 +90,30 @@
                     <fieldset>
                         <legend>교육결과 관리 검색영역</legend>
                         <div class="search-list">
-                            <dl>
-                                <dt><label for="srch01">사용기관명</label></dt>
-                                <dd><input type="text" id="srch01"></dd>                   
+                            <dl class="search-view">
+                                <dt><label>사용기관명</label></dt>
+                                <dd>우리실용음악학원</dd>
+                            </dl>
+                            <dl class="search-view">
+                                <dt><label>기관ID</label></dt>
+                                <dd>ooooo</dd>
+                            </dl>
+                            <dl class="search-view">
+                                <dt><label>사업자등록번호</label></dt>
+                                <dd>000-00-00000</dd>
+                            </dl>
+                            <dl class="search-view">
+                                <dt><label>대표자</label></dt>
+                                <dd>홍길동</dd>
                             </dl>
                             <dl>
-                                <dt><label for="srch02">기관ID</label></dt>
-                                <dd><input type="text" id="srch02"></dd>                  
+                                <dt><label for="srch01">과정명</label></dt>
+                                <dd><input type="text" id="srch01"></dd>                  
                             </dl>
                             <dl>
-                                <dt><label for="srch03">사업자등록번호</label></dt>
-                                <dd><input type="text" id="srch03"></dd>                   
-                            </dl>
-                            <dl>
-                                <dt><label for="srch04">대표자</label></dt>
-                                <dd><input type="text" id="srch04"></dd>                  
-                            </dl> 
-                            <dl class="period training">
-                                <dt><label for="srch05">교육기간</label></dt>                            
-                                <dd>
-                                    <input type="date" id="srch05" class="date"> <span class="dash">~</span> <input type="date" class="date">
-                                </dd>                 
-                            </dl>
-                            <dl class="area">
-                                <dt><label for="srch06">지역</label></dt>
+                                <dt><label for="srch02">온/오프<br>(교육방법)</label></dt>
                                 <dd class="flex-ac">
-                                    <select id="srch06" class="w-100">
-                                        <option value="none">전체</option>
-                                        <option value="1">2</option>
-                                        <option value="1">3</option>
-                                        <option value="1">4</option>
-                                    </select>
-                                    <!-- <select id="c" class="w-100">
-                                        <option value="none">전체</option>
-                                        <option value="1">2</option>
-                                        <option value="1">3</option>
-                                        <option value="1">4</option>
-                                    </select> -->
-                                </dd>      
-                            </dl>
-                            <dl>
-                                <dt><label for="srch07">기관 유형</label></dt>
-                                <dd class="flex-ac">
-                                    <select id="srch07" class="w-100">
-                                        <option value="none">전체</option>
-                                        <option value="1">시설</option>
-                                        <option value="2">학원</option>
-                                        <option value="3">대학</option>
-                                        <option value="4">기타</option>
-                                    </select>
-                                </dd>                
-                            </dl>
-                            <dl>
-                                <dt><label for="srch08">과정명</label></dt>
-                                <dd><input type="text" id="srch08"></dd>                  
-                            </dl>
-                            <dl>
-                                <dt><label for="srch09">온/오프<br>(교육방법)</label></dt>
-                                <dd class="flex-ac">
-                                    <select id="srch09" class="w-100">
+                                    <select id="srch02" class="w-100">
                                         <option value="none">전체</option>
                                         <option value="1">온라인</option>
                                         <option value="2">오프라인</option>
@@ -157,9 +122,42 @@
                                 </dd>                
                             </dl>
                             <dl>
-                                <dt><label for="srch10">이용권 구분</label></dt>
+                                <dt><label for="srch03">교육년도</label></dt>                            
                                 <dd class="flex-ac">
-                                    <select id="srch10" class="w-100">
+                                    <select id="srch03" class="w-100">
+                                        <option value="none">2024</option>
+                                        <option value="2023">2023</option>
+                                        <option value="2022">2022</option>
+                                        <option value="2021">2021</option>
+                                    </select>
+                                </dd>                 
+                            </dl>
+                            <dl>
+                                <dt><label for="srch04">교육차수</label></dt>
+                                <dd class="flex-ac">
+                                    <select id="srch04" class="w-100">
+                                        <option value="none">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                    </select>
+                                </dd>      
+                            </dl>
+                            <dl>
+                                <dt><label for="srch05">이수현황</label></dt>
+                                <dd class="flex-ac">
+                                    <select id="srch05" class="w-100">
+                                        <option value="none">전체</option>
+                                        <option value="1">교육예정</option>
+                                        <option value="2">교육중</option>
+                                        <option value="3">교육완료</option>
+                                    </select>
+                                </dd>                
+                            </dl>
+                            <dl>
+                                <dt><label for="srch06">평생교육이용권 구분</label></dt>
+                                <dd class="flex-ac">
+                                    <select id="srch06" class="w-100">
                                         <option value="none">전체</option>
                                         <option value="1">일반 이용권</option>
                                         <option value="1">디지털 이용권</option>
@@ -167,36 +165,42 @@
                                     </select>
                                 </dd>                
                             </dl>
-                            <dl class="exception-area">
+                            <dl class="exception-area has-chk-inner">
                                 <dt>7대 영역</dt>
                                 <dd class="flex-ac">
-                                    <div class="chk-box">
-                                        <input type="checkbox" id="chk-1">
-                                        <label for="chk-1">학력보완교육</label>
-                                    </div>
-                                    <div class="chk-box">
-                                        <input type="checkbox" id="chk-2">
-                                        <label for="chk-2">성인 문해교육</label>
-                                    </div>
-                                    <div class="chk-box">
-                                        <input type="checkbox" id="chk-3">
-                                        <label for="chk-3">직업능력 향상교육</label>
-                                    </div>
-                                    <div class="chk-box">
-                                        <input type="checkbox" id="chk-4">
-                                        <label for="chk-4">성인 진로개발역량 향상교육</label>
-                                    </div>
-                                    <div class="chk-box">
-                                        <input type="checkbox" id="chk-5">
-                                        <label for="chk-5">인문교양교육</label>
-                                    </div>
-                                    <div class="chk-box">
-                                        <input type="checkbox" id="chk-6">
-                                        <label for="chk-6">문화예술교육</label>
-                                    </div>
-                                    <div class="chk-box">
-                                        <input type="checkbox" id="chk-7">
-                                        <label for="chk-7">시민참여교육</label>
+                                    <div class="chk-wrap flex-ac">
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-0">
+                                            <label for="chk-0">전체</label>
+                                        </div>
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-1">
+                                            <label for="chk-1">학력보완교육</label>
+                                        </div>
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-2">
+                                            <label for="chk-2">성인 문해교육</label>
+                                        </div>
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-3">
+                                            <label for="chk-3">직업능력 향상교육</label>
+                                        </div>
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-4">
+                                            <label for="chk-4">성인 진로개발역량 향상교육</label>
+                                        </div>
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-5">
+                                            <label for="chk-5">인문교양교육</label>
+                                        </div>
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-6">
+                                            <label for="chk-6">문화예술교육</label>
+                                        </div>
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-7">
+                                            <label for="chk-7">시민참여교육</label>
+                                        </div>
                                     </div>
                                 </dd>                 
                             </dl>
@@ -209,68 +213,82 @@
                 <div class="top-info-group">
                     <p class="top-info-group-data">총 <strong>6,456</strong>건</p>
                     <div class="btn-wrap">
-                        <button type="button" class="btns bg-blue">추가</button>
                         <button type="button" class="btns bg-blue">엑셀 다운로드</button>
                     </div>
                 </div>
-                <div class="com-view-table table-scroll">
+                <div class="com-view-table">
                     <table>
                         <caption>사용기관 교육과정 정보 테이블</caption>
                         <colgroup>                       
                             <col style="width:92px;">
                             <col style="width:160px;">
-                            <col style="width:160px;">
-                            <col style="width:100px;">                                
-                            <col style="width:160px;">
-                            <col style="width:100px;">
                             <col style="width:356px;">
+                            <col style="width:100px;">                                
                             <col style="width:100px;">
-                            <col style="width:100px;">
-                            <col style="width:280px;">
-                            <col style="width:132px;">
+                            <col style="width:160px;">
+                            <col style="width:160px;">
+
                         </colgroup>
                         <thead>
                             <tr>
-                                <th>지역</th>
-                                <th>사용기관명</th>
-                                <th>기관ID</th>
-                                <th>기관유형</th>
-                                <th>과목명</th>
+                                <th>과정명</th>
                                 <th>교육방법</th>
                                 <th>교육기간</th>
                                 <th>정원</th>
                                 <th>이수인원</th>
                                 <th>결과 증빙자료<br>(출석부 등 )</th>
                                 <th>7대 영역</th>
+                                <th>이수현황</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
                                 <td>서울시</td>
-                                <td>OOOOOOOO</td>
-                                <td>24a0000</td>
-                                <td>시설</td>
-                                <td>OOOOOOOO</td>
                                 <td>온라인</td>
                                 <td>YYYY-MM-DD ~ YYYY-MM-DD</td>
                                 <td>00</td>
                                 <td>00</td>
-                                <td>OOOOOO.doc</td>
-                                <td><button type="button" class="btns bg-blue">상세보기</button></td>
+                                <td>OOOOOO.Doc</td>
+                                <td>
+                                    <div class="tooltip">
+                                        <span class="tooltip-txt">상세보기</span>
+                                        <div class="tooltip-content">
+                                            <ul class="bullet-list">
+                                                <li>학력보완교육</li>
+                                                <li>성인 문해교육</li>
+                                                <li>직업능력 향상교육</li>
+                                                <li>성인 진로개발역량 향상교육</li>
+                                                <li>인문교양교육</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </td>
+                                <td>교육예정</td>
                             </tr>
                             <tr>
                                 <td>서울시</td>
-                                <td>OOOOOOOO</td>
-                                <td>24a0000</td>
-                                <td>시설</td>
-                                <td>OOOOOOOO</td>
                                 <td>온라인</td>
                                 <td>YYYY-MM-DD ~ YYYY-MM-DD</td>
                                 <td>00</td>
                                 <td>00</td>
-                                <td>OOOOOO.doc</td>
-                                <td><button type="button" class="btns bg-blue">상세보기</button></td>
+                                <td>OOOOOO.Doc</td>
+                                <td>
+                                    <div class="tooltip">
+                                        <span class="tooltip-txt">상세보기</span>
+                                        <div class="tooltip-content">
+                                            <ul class="bullet-list">
+                                                <li>학력보완교육</li>
+                                                <li>성인 문해교육</li>
+                                                <li>직업능력 향상교육</li>
+                                                <li>성인 진로개발역량 향상교육</li>
+                                                <li>인문교양교육</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </td>
+                                <td>교육완료</td>
                             </tr>
+
                         </tbody>
                     </table>
                 </div>
