--- a/work/LAP_105.html
+++ b/work/LAP_105.html
@@ -127,9 +127,9 @@
         <div class="top-info-group">
             <h3>신청인 정보</h3>
         </div>
-        <div class="com-write-table resident-chk">
-            <table class="basic-info">
-                <caption>본인인증 정보 입력란</caption>
+        <div class="com-write-table">
+            <table class="lg-only">
+                <caption>신청인 정보 입력란</caption>
                 <colgroup>
                     <col style="width: 200px;">
                     <col>
@@ -155,39 +155,76 @@
                     </tr>
                 </tbody>
             </table>
+            <table class="sm-show-800">
+                <caption>신청인 정보 입력란</caption>
+                <colgroup>
+                    <col style="width: 200px;">
+                    <col>
+                </colgroup>
+                <tbody>
+                    <tr>
+                        <th class="txt-l">신청인 이름</th>
+                        <td>홍길동</td>
+                    </tr>
+                    <tr>
+                        <th class="txt-l">생년월일</th>
+                        <td>2000.01.01</td>
+                    </tr>
+                    <tr>
+                        <th class="txt-l">지급수단</th>
+                        <td>선불카드(개인)</td>
+                    </tr>
+                    <tr>
+                        <th class="txt-l">지급기관</th>
+                        <td>신한카드</td>
+                    </tr>
+                    <tr>
+                        <th class="txt-l">휴대폰번호</th>
+                        <td>010-1234-5678</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
         <div class="top-info-group">
             <h3>지원자대상 정보</h3>
         </div>
         <div class="com-view-table">
             <table>
+                <caption>신청인 정보 입력란</caption>
+                <colgroup>
+                    <col style="width: 13%;">
+                    <col>
+                    <col>
+                    <col>
+                    <col>
+                </colgroup>
                 <thead>
-                  <tr>
-                    <th scope="col">&nbsp;</th>
-                    <th colspan="2" scope="colgroup">2024학년도</th>
-                    <th colspan="2" scope="colgroup">2025학년도</th>
-                  </tr>
-                  <tr>
-                    <th scope="row">&nbsp;</th>
-                    <th scope="col">이용권 신청여부</th>
-                    <th scope="col">신청가능금액</th>
-                    <th scope="col">이용권 신청여부</th>
-                    <th scope="col">신정가능금액</th>
-                  </tr>
+                    <tr>
+                        <th scope="col">&nbsp;</th>
+                        <th colspan="2" scope="colgroup">2024학년도</th>
+                        <th colspan="2" scope="colgroup">2025학년도</th>
+                    </tr>
+                    <tr>
+                        <th scope="row">&nbsp;</th>
+                        <th scope="col">이용권 신청여부</th>
+                        <th scope="col">신청가능금액</th>
+                        <th scope="col">이용권 신청여부</th>
+                        <th scope="col">신정가능금액</th>
+                    </tr>
                 </thead>
                 <tbody>
-                  <tr>
-                    <th scope="row">&nbsp;</th>
-                    <td>신청가능</td>
-                    <td class="txt-r color-blue">4,000,000</td>
-                    <td>대상자 아님</td>
-                    <td class="txt-r">0</td>
-                  </tr>
-                  <tr class="total">
-                    <th scope="row">신청가능 총 금액</th>
-                    <td colspan="2" class="txt-r">4,000,000</td>
-                    <td colspan="2" class="txt-r">0</td>
-                  </tr>
+                    <tr>
+                        <th scope="row">&nbsp;</th>
+                        <td>신청가능</td>
+                        <td class="txt-r color-blue">4,000,000</td>
+                        <td>대상자 아님</td>
+                        <td class="txt-r">0</td>
+                    </tr>
+                    <tr class="total">
+                        <th scope="row">신청가능 총 금액</th>
+                        <td colspan="2" class="txt-r">4,000,000</td>
+                        <td colspan="2" class="txt-r">0</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
