--- a/work/LAP_401.html
+++ b/work/LAP_401.html
@@ -78,70 +78,155 @@
             <div class="location-box">
                 <span class="arrow">평생교육이용권</span>
                 <span class="arrow">수기 공모 신청</span>
+                <span class="arrow">수기공모신청 등록</span>
             </div>
         </div>
     </div>
     <div class="container wrap">
         <div class="page-header">
-            <h2 class="page-header-tit">수기 공모 신청</h2>
+            <h2 class="page-header-tit">수기공모신청 등록</h2>
         </div>
-        <div class="contents contest">
-            <div class="top-info-group">
-                <p class="top-info-group-data">총 <strong>5</strong>건</p>
-                <button type="button" class="btns bg-blue">우수사례공모 신청 등록</button>
-            </div>
-            <div class="com-view-table">
-                <table class="lg-only">
-                    <caption>수기 공모 신청 테이블</caption>
+        <div class="contents ">
+            <div class="com-write-table">
+                <table class="basic-info lg-only">
+                    <caption>신청정보 입력란</caption>
                     <colgroup>
-                        <col style="width: 12%;">                        
-                        <col style="width: 15%;">
-                        <col style="width: 15%;">
-                        <col style="width: 15%;">
+                        <col style="width: 200px;">
+                        <col>
+                        <col style="width: 200px;">
                         <col>
                     </colgroup>
-                    <thead>
-                        <tr>
-                            <th>신청일자</th>
-                            <th>성명</th>
-                            <th>생년월일</th>
-                            <th>연락처</th>
-                            <th>처리상태</th>
-                        </tr>
-                    </thead>
                     <tbody>
                         <tr>
-                            <td>2024-01-01</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
-                            <td>&nbsp;</td>
+                            <th class="txt-l">성명</th>
+                            <td>홍길동</td>
+                            <th class="txt-l">생년월일</th>
+                            <td>1976년 08월 08일</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">주소</th>
+                            <td>(04520) 서울특별시 중구 청계천로 14 7층</td>
+                            <th class="txt-l must-type"><label for="tel">휴대전화번호</label></th>
+                            <td>
+                                <div class="input-num">
+                                    <select id="tel">
+                                        <option value="none">선택</option>
+                                        <option value="1">010</option>
+                                        <option value="1">3</option>
+                                        <option value="1">4</option>
+                                    </select>
+                                    <span class="lg-only">-</span>
+                                    <div class="tel-num flex-ac">
+                                        <input type="tel" title="전화번호 중간자리">
+                                        -
+                                        <input type="tel" title="전화번호 끝자리">
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l"><label for="srch01">공모주제</label></th>
+                            <td colspan="3">
+                                <div class="flex-dc">
+                                    <select id="srch01" class="fixed-value">
+                                        <option value="">전체</option>
+                                    </select>
+                                    <input type="text" readonly>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l"><label for="srch02">제목</label></th>
+                            <td colspan="3">
+                                <input type="text" placeholder="50자 이내로 작성해주세요." id="srch02">
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l"><label for="srch03">글내용</label></th>
+                            <td colspan="3">
+                                <div class="timer">
+                                    <strong>남은시간 : 23:57</strong>
+                                    <p>[<span class="color-red">25분</span> 이내 저장(등록) 후 재수정 해주시기 바랍니다.]</p>
+                                </div>
+                                <div class="txt-box">                                    
+                                    <textarea id="srch03" class="box"></textarea>
+                                    <p class="txt-byte">5/200</p>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <table class="basic-info sm-show-800">
+                    <caption>신청정보 입력란</caption>
+                    <colgroup>
+                        <col style="width: auto;">
+                        <col>
+                    </colgroup>
+                    <tbody>
+                        <tr>
+                            <th class="txt-l">성명</th>
+                            <td>홍길동</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">생년월일</th>
+                            <td>1976년 08월 08일</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l">주소</th>
+                            <td>(04520) 서울특별시 중구 청계천로 14 7층</td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l must-type"><label for="tel">휴대전화번호</label></th>
+                            <td>
+                                <div class="input-num">
+                                    <select id="tel">
+                                        <option value="none">선택</option>
+                                        <option value="1">010</option>
+                                        <option value="1">3</option>
+                                        <option value="1">4</option>
+                                    </select>
+                                    <span class="lg-only">-</span>
+                                    <div class="tel-num flex-ac">
+                                        <input type="tel" title="전화번호 중간자리">
+                                        -
+                                        <input type="tel" title="전화번호 끝자리">
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l"><label for="srch01">공모주제</label></th>
+                            <td>
+                                <div class="flex-dc">
+                                    <select id="srch01" class="fixed-value">
+                                        <option value="">전체</option>
+                                    </select>
+                                    <input type="text" readonly>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l"><label for="srch02">제목</label></th>
+                            <td>
+                                <input type="text" placeholder="50자 이내로 작성해주세요." id="srch02">
+                            </td>
+                        </tr>
+                        <tr>
+                            <th class="txt-l"><label for="srch03">글내용</label></th>
+                            <td>
+                                <div class="timer">
+                                    <strong>남은시간 : 23:57</strong>
+                                    <p>[<span class="color-red">25분</span> 이내 저장(등록) 후 재수정 해주시기 바랍니다.]</p>
+                                </div>
+                                <div class="txt-box">                                    
+                                    <textarea id="srch03" class="box"></textarea>
+                                    <p class="txt-byte">내용 0/3000</p>
+                                </div>
+                            </td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-            <ul class="sm-show-800">
-                <li>
-                    <strong>신청일자 :</strong>
-                    <p>2024-01-01</p>
-                </li>
-                <li>
-                    <strong>이름 :</strong>
-                    <p>홍길동</p>
-                </li>
-                <li>
-                    <strong>생년월일 :</strong>
-                    <p>2024-01-01</p>
-                </li>
-                <li>
-                    <strong>연락처 :</strong>
-                    <p>010-1234-5678</p>
-                </li>
-                <li>
-                    <strong>처리상태 :</strong>
-                    <p>처리중</p>
-                </li>
-            </ul>
             <div class="com-paging">
                 <button class="prev">이전</button>
                 <button class="on">1</button>
