--- a/work/LUP_001.html
+++ b/work/LUP_001.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- css js inject -->
     <link rel="stylesheet" href="../css/biz2/reset.css">
     <link rel="stylesheet" href="../css/biz2/common.css">
@@ -14,22 +14,21 @@
     <script src="../js/biz2/jquery.1.8.2.min.js"></script>
     <script src="../js/biz2/swiper-bundle.min.js"></script>
     <script src="../js/biz2/script.js"></script>
-    <title>울산광역시 평생교육이용권</title>
+    <title>울산광역시 평생교육이용원</title>
 </head>
 <body>
     <header>
-        <div class="logo-area multi-logo-area">
-            <a href="LMP_001.html"><img src="../images/biz2/header_logo_horizontal.svg" alt="울산광역시"></a>
-            <a href="LMP_001.html"><img src="../images/biz2/header_logo_2.png" alt="울산광역시"></a>
-            <!-- 임시 구분용 텍스트 -->
-            <span style="margin-left: 20px;">지자체 홈페이지</span>
+        <div class="logo-area">
+            <a href="IMP_002.html">
+                <img src="../images/biz2/header_logo_2.png" alt="울산광역시">
+            </a>
         </div>
         <div class="menu-area">
             <!-- 로그인 시 -->
-            <!-- <a href="#" class="log-info">
+            <a href="#" class="log-info">
                 <img src="../images/biz2/ico/ico_loguser.svg" alt="로그인 유저 아이콘, 로그아웃 아이콘">
                 <span class="log-info-txt">로그아웃</span>
-            </a> -->
+            </a>
             <button class="open-btn">
                 <span class="blind">메뉴 열기</span>
             </button>
@@ -38,48 +37,30 @@
                     <li>
                         <span class="tit">사업안내</span>
                         <div class="link-item">
-                            <a href="LGP_001.html">평생교육이용권이란?</a>
-                            <a href="LGP_001.html">평생교육이용권 사용하기</a>
+                            <a href="IGP_001.html">평생교육이용권이란?</a>
+                            <a href="IGP_001.html">평생교육이용권 사용하기</a>
                         </div>
                     </li>
                     <li>
-                        <span class="tit">사용안내</span>
+                        <span class="tit">이용권 사용기관</span>
                         <div class="link-item">
-                            <a href="LUP_001.html">사용처 안내</a>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="tit">평생교육이용권</span>
-                        <div class="link-item">
-                            <a href="LAP_100.html">평생교육이용권 신청</a>
-                            <a class="hidden" href="#">이의제기 신청</a>
-                            <a href="#">선정 포기 신청</a>
-                            <a href="LAP_400.html">수기 공모 신청</a>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="tit">우수이용자 신청</span>
-                        <div class="link-item">
-                            <a href="LAP_001.html">우수이용자 신청</a>
+                            <a href="ILP_001.html">사용기관 신청</a>
+                            <a href="IIP_800.html">사용기관 신청 현황</a>
+                            <a class="hidden" href="#">이용권 사용내역</a>
+                            <a href="#">교육결과 관리</a>
+                            <a class="hidden" href="#">교육과정 정보</a>
+                            <a class="hidden" href="#">학습자 정보</a>
+                            <a href="IIP_400.html">기관 정보 수정</a>
+                            <a class="hidden" href="#">사용기관 연수</a>
                         </div>
                     </li>
                     <li>
                         <span class="tit">게시판</span>
                         <div class="link-item">
-                            <a href="LNP_001.html">공지사항</a>
-                            <a href="LNP_100.html">자료실</a>
-                            <a href="LNP_200.html">자주하는질문</a>
-                            <a href="LNP_200.html">질의응답</a>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="tit">마이페이지</span>
-                        <div class="link-item">
-                            <a href="LIP_001.html">개인정보수정</a>
-                            <a href="LIP_100.html">평생교육이용권 신청내역</a>
-                            <a href="#">평생교육이용권 이용내역</a>
-                            <a href="#">교육이수정보</a>
-                            <a class="hidden" href="#">이용자 이벤트</a>
+                            <a href="IIP_001.html">공지사항</a>
+                            <a href="INP_100.html">자료실</a>
+                            <a href="INP_200.html">자주하는질문</a>
+                            <a href="INP_200.html">질의응답</a>
                         </div>
                     </li>
                 </ul>
@@ -98,8 +79,203 @@
             </div>
         </div>
     </div>
-    <div class="container temp sub">
-        <div class="temp-cont lup-001"></div>
+    <div class="container wrap">
+        <div class="page-header">
+            <h2 class="page-header-tit">사용처 안내</h2>
+        </div>
+        <div class="contents usage-guide">
+            <div class="search-box">
+                <form>
+                    <fieldset>
+                        <legend>사용처 안내 검색영역</legend>
+                        <div class="search-list">
+                            <dl>
+                                <dt><label for="srch01">사용기관명</label></dt>
+                                <dd>
+                                    <div class="search-input mw-set">
+                                        <input type="text" id="srch01">
+                                        <button type="button" class="btn-search">검색</button>
+                                    </div>
+                                </dd>                   
+                            </dl>
+                            <dl>
+                                <dt><label for="srch02">기관 구분</label></dt>
+                                <dd>
+                                    <div class="flex-ac mw-set">
+                                        <select id="srch02">
+                                            <option value="none">전체</option>
+                                            <option value="1">2</option>
+                                            <option value="1">3</option>
+                                            <option value="1">4</option>
+                                        </select>
+                                        <select>
+                                            <option value="none">전체</option>
+                                            <option value="1">2</option>
+                                            <option value="1">3</option>
+                                            <option value="1">4</option>
+                                        </select>
+                                    </div>
+                                </dd>                  
+                            </dl>
+                            <dl>
+                                <dt>기관 구분</dt>                            
+                                <dd>
+                                    <div class="flex-ac divide">
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-5">
+                                            <label for="chk-5">온라인 교육기관</label>
+                                        </div>
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-6">
+                                            <label for="chk-6">오프라인 교육기관</label>
+                                        </div>
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-7">
+                                            <label for="chk-7">온/오프라인 교육기관</label>
+                                        </div>
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-8">
+                                            <label for="chk-8">장애인 편의시설</label>
+                                        </div>
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-9">
+                                            <label for="chk-9">장애인 평생교육시설</label>
+                                        </div>
+                                    </div>
+                                </dd>                 
+                            </dl>
+                            <dl>
+                                <dt>기관 연계사업<br> 유형</dt>
+                                <dd>
+                                    <div class="flex-ac divide">
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-12">
+                                            <label for="chk-12" class="ico organ01">학점은행제</label>
+                                        </div>
+                                        <div class="chk-box ico">
+                                            <input type="checkbox" id="chk-13">
+                                            <label for="chk-13" class="ico organ02">평생학습계좌제</label>
+                                        </div>
+                                        <div class="chk-box ico">
+                                            <input type="checkbox" id="chk-14">
+                                            <label for="chk-14" class="ico organ03">성인문해교육</label>
+                                        </div>
+                                    </div>
+                                </dd>      
+                            </dl>
+                            <dl>
+                                <dt><label for="srch03">운영 강좌 유형</label></dt>                            
+                                <dd>
+                                    <div class="flex-ac divide">
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-15">
+                                            <label for="chk-15">학력보완교육</label>
+                                        </div>
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-16">
+                                            <label for="chk-16">성인 문해교육</label>
+                                        </div>
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-17">
+                                            <label for="chk-17">직업능력 향상교육</label>
+                                        </div>
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-18">
+                                            <label for="chk-18">성인 진로개발역량 향상교육</label>
+                                        </div>
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-19">
+                                            <label for="chk-19">인문교양교육</label>
+                                        </div>
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-20">
+                                            <label for="chk-20">문화예술교육</label>
+                                        </div>
+                                        <div class="chk-box">
+                                            <input type="checkbox" id="chk-21">
+                                            <label for="chk-21">시민참여교육</label>
+                                        </div>
+                                    </div>
+                                </dd>                 
+                            </dl>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>  
+            <ul class="asterisk-list">
+                <li>※ 검색하기를 통해 조회된 기관에서만 평생교육이용권 카드 이용이 가능합니다</li>
+                <li>※ 본 화면의 정보는 현재 정보와 다를 수 있습니다. 평생교육이용권 카드 이용 전 반드시 기관에 직접 확인하시기 바랍니다.</li>
+            </ul>
+            <div class="top-info-group">
+                <p class="top-info-group-data">총 <strong>3,101</strong>건</p>
+                <label for="select-view" class="blind">노출 건수 선택</label>
+                <select id="select-view">
+                    <option value="1">10건 보기</option>
+                    <option value="2">20건 보기</option>
+                    <option value="3">30건 보기</option>
+                </select>
+            </div>
+            <div class="com-view-table">
+                <table>
+                    <caption>사용처 안내 테이블</caption>
+                    <colgroup>                      
+                        <col style="width:30%;">
+                        <col style="width:15%;">
+                        <col style="width:12%;">
+                        <col style="width:10%;">                                
+                        <col style="width:10%;">
+                        <col>
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th>사용기관명</th>
+                            <th>주소</th>
+                            <th>기관 구분</th>
+                            <th>지도보기</th>
+                            <th>홈페이지</th>
+                            <th>기관 연계사업 유형</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="txt-l">(주)중앙자동차운전전문학원 <button type="button" class="btn-bd new">NEW</button></td>
+                            <td class="txt-l">인천광역시 서구</td>
+                            <td>오프라인</td>
+                            <td>&nbsp;</td>
+                            <td><i class="ico homepage">홈페이지</i></td>
+                            <td>&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td class="txt-l">(주)중앙자동차운전전문학원</td>
+                            <td class="txt-l">인천광역시 서구</td>
+                            <td>오프라인</td>
+                            <td><i class="ico map">지도보기</i></td>
+                            <td><i class="ico homepage">홈페이지</i></td>
+                            <td>&nbsp;</td>
+                        </tr>
+                        <tr>
+                            <td class="txt-l">(주)중앙자동차운전전문학원</td>
+                            <td class="txt-l">인천광역시 서구</td>
+                            <td>오프라인</td>
+                            <td><i class="ico map">지도보기</i></td>
+                            <td><i class="ico homepage">홈페이지</i></td>
+                            <td><i class="ico organ02">기관 연계사업 유형</i></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="com-paging">
+                <button class="prev">이전</button>
+                <button class="on">1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>4</button>
+                <button>5</button>
+                <span class="empty">...</span>
+                <button>120</button>
+                <button class="next">다음</button>
+            </div>
+        </div>
     </div>
     <footer class="wrap">
         <div class="info-content">
